Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-87624

Binaries finalized when last control is full and with pending values does not discard correct amount of bytes when reopened from binary

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 8.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Labels:
      None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Execution Team 2024-03-18

          Assignee:
          henrik.edin@mongodb.com Henrik Edin
          Reporter:
          henrik.edin@mongodb.com Henrik Edin
          Votes:
          0 Vote for this issue
          Watchers:
          1 Start watching this issue

            Created:
            Updated:
            Resolved: