SERVER-87624 Fix reopen for binaries finalized when last control is full and with pending values. (#19763)

GitOrigin-RevId: 25850f8876dc2965d1bac473b3e51b525b3e8aef